modules/control-center-web/src/main/js/public/stylesheets/style.scss
/* ... */
.header .nav.navbar-nav a:hover > .stable,
.header .nav.navbar-nav a:hover > .beta,
.header .nav.navbar-nav a:hover > .private {
    opacity: 1;
    -ms-filter: none;
    filter: none;
}

.header .nav.navbar-nav .beta {
    background-color: #59c3d1;
}

.header .nav.navbar-nav .stable {
    background-color: #41b841;
}

.header .nav.navbar-nav .private {
    background-color: #333;
}

.theme-line header {
    border-bottom: 8px solid;
}

.theme-line header h2 {
    color: #aaa;
}

.theme-line header p {
    color: #666;
}

.theme-line header {
    border-bottom-color: $ignite-red;
}

.theme-line .navbar-nav {
    color: #888;
}

.theme-line .navbar-nav a {
    color: #bbb;
}

.theme-line header a.btn {
    background-color: $ignite-red;
}

.theme-line header a.btn:hover {
    background-color: #950d12;
}

.theme-line header .navbar-nav .tt-cursor {
    background-color: $ignite-red;
}

.theme-line header .navbar-nav a:hover, .theme-line header .navbar-nav .open > a {
    color: $ignite-red;
}

.theme-line .navbar-nav .active a {
    //font-weight: bold;
    color: $ignite-red;
}

.theme-line .navbar-nav .active a:hover {
    color: #950d12;
}

.theme-line .main-links .links a:hover {
    color: $ignite-red;
}

.theme-line .main-content a {
    color: #666;
}

.theme-line .main-content a:hover {
    color: #950d12;
}

.theme-line .sidebar-nav ul li a.active:before {
    background-color: $ignite-red;
}

.theme-line .sidebar-nav ul li a.active {
    color: $ignite-red;
}

.theme-line .sidebar-nav ul li a:hover, .theme-line .sidebar-nav ul li a.active:hover {
    color: #950d12;
}

.theme-line .main-content .nav-horizontal a.active {
    border-color: $ignite-red;
    color: $ignite-red;
}

.theme-line .main-content .nav-horizontal a:hover {
    color: #950d12;
}

.theme-line .main-content .nav-horizontal a.active:hover {
    border-color: #950d12;
}

.theme-line header .navbar-nav a.active, .theme-line #versions-list li a:hover strong, .theme-line #versions-list li a.active .current, .theme-line #versions-list li a:active .current {
    color: $ignite-red;
}

.theme-line header .navbar-nav a {
    font-size: 18px;
}

.theme-line.body-threes .section-right .threes-nav .btn-default:hover, .theme-line.page-docs.body-threes .section-right .threes-nav .pull-right a:hover {
    color: $ignite-red;
    border-color: $ignite-red;
}

.theme-line .section-right {
    padding-left: 30px;
}

.body-overlap .main-content {
    margin-top: 30px;
}

.body-box .main-content,
.body-overlap .main-content {
    padding: 30px;
    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
    background-color: #fff;
}

body {
    font-weight: 400;
    font-family: Roboto Slab, serif;;
}

h1, h2, h3, h4, h5, h6 {
    font-weight: 700;
    font-family: Roboto Slab, serif;
    margin-bottom: 10px;
}

.submit-vote.submit-vote-parent.voted a.submit-vote-button, .submit-vote.submit-vote-parent a.submit-vote-button:hover {
    background-color: $ignite-red;
}

div.submit-vote.submit-vote-parent.voted a.submit-vote-button:hover {
    background-color: #950d12;
}

a, .link .title {
    color: $ignite-red;
}

a:hover, .link:hover .title {
    color: #950d12;
}

.header h1.navbar-brand a {
    background-image: url("#{$logo-path}");
}

.header h1.navbar-brand {
    width: 96px;
}

.block-edit-parameters {
    text-align: right;
    padding-bottom: 5px;
}

.container-footer {
    margin-top: 20px;
}

/* Modal */
.modal {
    display: block;
    overflow: hidden;
}

.modal .close {
    position: absolute;
    top: 10px;
    right: 10px;
    float: none;
}

// Close icon
.modal-header .close {
    margin-right: -2px;
}

.modal .modal-dialog {
    width: 610px;
}

.modal .modal-content {
    border-radius: 0;
    background-color: #f7f7f7;
}

.modal .modal-content .modal-header {
    background-color: #fff;
    text-align: center;
    color: #555;
    padding: 15px;
    font-family: "myriad-pro", sans-serif;
}

.modal .modal-content .modal-header h4 {
    font-family: "myriad-pro", sans-serif;
    font-size: 22px;
}

.modal .modal-content .modal-header h4 .fa {
    display: block;
    font-size: 41px;
    color: #ddd;
    margin-bottom: 5px;
}

.modal .modal-content .modal-header p {
    color: #aaa;
    font-size: 1em;
    margin: 3px 0 0;
}

.modal .modal-content .modal-spacer {
    padding: 10px 10px 0 10px;
}

.modal .modal-content .modal-footer {
    margin-top: 0;
}

.modal-body {
    padding-top: 15px;
}

h1.ignite-logo {
    background-image: url("#{$logo-path}");
}

.block-display-image img {
    max-width: 100%;
    max-height: 450px;
    margin: auto;
    display: block;
}

.greedy {
    min-height: 100%;
    height: #{"calc(100vh - 290px)"};
}

@media (min-width: 768px) {
    .navbar-nav > li > a {
        padding-top: 18px;
        padding-bottom: 10px;
    }
}

.details-row {
    padding: 0 10px;
}

.details-row, .settings-row {
    display: block;
    margin: 10px 0;

    label.table-header {
        line-height: $input-height;
    }

    [class*="col-"] {
        display: inline-block;
        vertical-align: middle;
        float: none;

        padding-left: 0 !important;
        padding-right: 0 !important;
    }

    input[type="checkbox"] {
        line-height: 20px;
        margin-right: 5px;
    }

    .checkbox label {
        line-height: 20px;
        vertical-align: middle;
    }
}

button {
    margin-right: 5px;
}

h1,
h2,
h3 {
    user-select: none;
    font-weight: normal;
    /* Makes the vertical size of the text the same for all fonts. */
    line-height: 1;
}

h3 {
    color: black;
    font-size: 1.2em;
    margin-top: 0;
    margin-bottom: 1.5em;
}

table tr:hover {
    cursor: pointer;
}

.btn {
    padding: 3px 6px;
}

button .caret, .btn .caret {
    float: right;
    margin-left: 5px;
    margin-top: 7px;
}

.base-control {
    text-align: left;
    padding: 3px 3px;
    height: $input-height;
}
/* ... */

